Typos, cleanup and docs++

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -49,7 +49,7 @@ button {
 
     &:focus,
     &:active {
-        border-color: $color__gold--dark;
+        border-color: $color__cta;
         outline: none;
     }
 }
