--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,7 +7,7 @@
 @import "base/normalize";
 @import "utils/helpers";
 
-// Basic element styles and fonts
+// Basic element styles
 @import "base/base";
 
 // Global site components
