Files renamed according to code convention
Also removed empty footer

--- a/src/scss/components/app.scss
+++ b/src/scss/components/app.scss
@@ -27,8 +27,10 @@
             transition: all $darkMode__timeIn $easeInQuad;
         }
 
-        .game__date time {
-            color: $color__grey--dark;
+        .game__date {
+            time {
+                color: $color__grey--dark;
+            }
         }
     }
 }
