NPM packages upgrade

--- a/src/scss/base/_normalize.scss
+++ b/src/scss/base/_normalize.scss
@@ -1,6 +1,6 @@
 ﻿// Various variables and similar are available in the Normalize.scss library.
 // Inspect the following file to learn more!
-@import "../../node_modules/normalize-scss/sass/normalize";
+@import "./node_modules/normalize-scss/sass/normalize";
 
 // Hint: The total size of normalize as is adds 2kb to your css payload - worth it if you ask me 8]
 
